tests/errors/err-call-tail-conditional.data
-- asm
mov %r0, 0
call local body
exit
body:
mov %r0, 1
exit
jne %r0, 0, body
-- error
Failed to load code: sub-program does not end with EXIT or unconditional jump at PC 5
